--- a/app/src/main/res/layout/activity_search_category.xml
+++ b/app/src/main/res/layout/activity_search_category.xml
@@ -116,7 +116,7 @@
                 android:textStyle="bold" />
 
             <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rv_ingrediant"
+                android:id="@+id/rv_country"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_margin="10dp"
