adding loading bar and profile activity

--- a/app/src/main/res/layout/favorite_rv.xml
+++ b/app/src/main/res/layout/favorite_rv.xml
@@ -49,6 +49,7 @@
             android:id="@+id/delete_btn_fav"
             android:layout_width="30dp"
             android:layout_height="30dp"
+            android:layout_marginStart="120dp"
             android:background="@drawable/delete"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -64,6 +65,31 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
+
+        <androidx.appcompat.widget.AppCompatAutoCompleteTextView
+            android:id="@+id/dp_fav"
+            android:layout_width="100dp"
+            android:layout_height="30dp"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            android:background="#F99417"
+            android:completionHint="select a day"
+            android:completionThreshold="0"
+            android:defaultFocusHighlightEnabled="true"
+            android:editable="false"
+            android:hint="@string/drop_hint"
+            android:paddingStart="12dp"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            android:textAlignment="center"
+            android:textColorHint="@color/white"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/fav_button"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_fav_meal_name"
+            tools:ignore="Deprecated" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
